--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,21 @@ project(KCD LANGUAGES CXX)
 # C++ Version
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
 
-# Exe
-add_executable(app app.cpp)
+# Build
+IF(NOT CMAKE_BUILD_TYPE)
+  SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
+ENDIF(NOT CMAKE_BUILD_TYPE)
 
-# C++ Version
-target_compile_features(app
-    PRIVATE
-        cxx_std_20
-)
+# configuration
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configuration/directories.h.in ${CMAKE_CURRENT_SOURCE_DIR}/configuration/directories.h)
+
+# Demos
+add_subdirectory(demo_001)
+add_subdirectory(demo_002)
+
+# Resources
+foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
+    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/resources DESTINATION ${CMAKE_BINARY_DIR}/${OUTPUTCONFIG})
+endforeach()
